# training

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: com.garmin-coach.web.plist
docs/: access-guide.md  architecture.md  build-log.md
src/garmin_coach/: __init__.py  auth.py  cli.py  client.py  models.py  normalize.py  server.py  setup_login.py
src/garmin_coach/web/: __init__.py  api.py  app.py  chat.py
tests/: test_normalize.py  test_normalize_detail.py  test_server.py  test_web_api.py  test_weekly.py
tests/fixtures/: activity_details.json  activity_hr_zones.json  activity_list.json  activity_power_zones.json  activity_splits.json  activity_summary.json  courses.json  cycling_ftp.json  fitness_age.json  hrv_data.json  max_metrics.json  rhr_day.json  sleep_data.json  training_status.json
training/: whistler-gran-fondo-plan.md  whistler-sessions.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.tsx  index.css
web/src/components/: charts.tsx  data-state.tsx  layout.tsx
web/src/lib/: api.ts  format.ts  fueling.ts
web/src/pages/: coach.tsx  dashboard.tsx  fuel.tsx  plan.tsx  ride-detail.tsx  schedule.tsx
