[project]
name = "garmin-coach"
version = "0.1.0"
description = "Personal cycling training assistant: local read-only Garmin MCP server"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.3.6",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
garmin-setup = "garmin_coach.setup_login:main"
garmin-coach = "garmin_coach.cli:main"
garmin-mcp = "garmin_coach.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_coach"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "garminconnect.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
